--- a/KSRUtility/KSRUtility.vcxproj
+++ b/KSRUtility/KSRUtility.vcxproj
@@ -140,11 +140,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainForm.cpp" />
+    <ClCompile Include="Member.cpp" />
+    <ClCompile Include="SQLEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Member.h" />
+    <ClInclude Include="SQLEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
